fix(druid): address CodeQL findings in NettyHttpClientTest
Replace the deprecated URL(String) constructor with URI.create(...).toURL()
in the two new regression tests, and use String#isEmpty() instead of
equals("") when skipping header lines in serveRawResponse.